fix broken overflow property

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  overflow: none;
+  overflow: hidden;
 }
 
 canvas {
